<resources>
    <string name="app_name">Lista de Livros</string>
    <string name="login">Login</string>
    <string name="cadastro">Cadastro</string>
    <string name="digite_o_seu_nome">Digite o seu nome</string>
    <string name="entrar">Entrar</string>
    <string name="nome_do_filme">Nome do Filme</string>
    <string name="duracao">Duração</string>
    <string name="nota_do_filme">Nota do Filme</string>
    <string name="autor">autor</string>
    <string name="nome_do_livro">Nome do Livro</string>
    <string name="cadastrar">Cadastrar</string>
    <string name="ir_para_a_lista">Lista de Livros</string>
</resources>